# gemini-splunk-security-agent

./: .dockerignore  HACKATHON.md  README.md  architecture_diagram.md  pyproject.toml
app/: dashboard.py
scripts/: SMOKE_OUTPUT.md  build_demo_video.py  smoke.py
src/gemini_splunk_security_agent/: __init__.py  agent.py  mcp_stub.py  runner.py
tests/: test_agent_build.py  test_mcp_stub.py
